# o-ratio

./: .gitignore  CMakeLists.txt
api/java/java-api/: build.xml
api/java/java-api/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
api/java/java-api/src/it/cnr/istc/ratio/api/: ArithItem.java  Atom.java  AtomState.java  BoolItem.java  CausalGraph.java  CausalGraphListener.java  EnumItem.java  Item.java  LBool.java  Solver.java  State.java
api/java/java-api/src/it/cnr/istc/ratio/gui/: CausalGraphDisplay.java  CausalGraphJFrame.form  CausalGraphJFrame.java
api/java/java-api/test/it/cnr/istc/ratio/api/: SolverTest.java
api/java/native-api/: CMakeLists.txt  causal_graph_api.cpp  causal_graph_api.h  causal_graph_java_listener.cpp  causal_graph_java_listener.h  handle.h  solver_api.cpp  solver_api.h
api/java/native-api/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
cg-lib/: CMakeLists.txt  Makefile  atom_flaw.cpp  atom_flaw.h  causal_graph.cpp  causal_graph.h  causal_graph_listener.cpp  causal_graph_listener.h  disjunction_flaw.cpp  disjunction_flaw.h  enum_flaw.cpp  enum_flaw.h  flaw.cpp  flaw.h  init.rddl  propositional_agent.cpp  propositional_agent.h  propositional_state.cpp  propositional_state.h  resolver.cpp  resolver.h  reusable_resource.cpp  reusable_resource.h  smart_type.h  state_variable.cpp  state_variable.h
cg-lib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
cg-lib/tests/: blocks_2.rddl  blocks_3.rddl  blocks_4.rddl  cg_test.cpp  classical_problems_test.cpp  heuristic_test.cpp  reusable_resource_test.cpp  test_rr_0.rddl
core-lib/: CMakeLists.txt  atom.cpp  atom.h  constructor.cpp  constructor.h  core.cpp  core.h  default_constructor.cpp  default_constructor.h  defined_conjunction.cpp  defined_conjunction.h  defined_constructor.cpp  defined_constructor.h  defined_method.cpp  defined_method.h  defined_predicate.cpp  defined_predicate.h  disjunction.cpp  disjunction.h  enum_type.cpp  enum_type.h  env.cpp  env.h  env_ptr.h  expression_visitor.cpp  expression_visitor.h  field.cpp  field.h  instantiated_field.cpp  instantiated_field.h  item.cpp  item.h  method.cpp  method.h  predicate.cpp  predicate.h  scope.cpp  scope.h  solver.cpp  solver.h  (+12 more)
core-lib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
core-lib/parser/: ratio.g4  ratioBaseListener.cpp  ratioBaseListener.h  ratioBaseVisitor.cpp  ratioBaseVisitor.h  ratioLexer.cpp  ratioLexer.h  ratioLexer.tokens  ratioListener.cpp  ratioListener.h  ratioParser.cpp  ratioParser.h  ratioVisitor.cpp  ratioVisitor.h
core-lib/tests/: core_test.cpp
gui/: graph.json  state.json
gui/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
gui/src/it/cnr/istc/ratio/gui/: ArithItem.java  Atom.java  AtomState.java  BoolItem.java  CausalGraphDisplay.java  EnumItem.java  Flaw.java  Item.java  LBool.java  MainJFrame.form  MainJFrame.java  Resolver.java  State.java  StateTreeCellRenderer.java  StateTreeModel.java
smt-lib/: CMakeLists.txt  assertion.cpp  assertion.h  clause.cpp  clause.h  constr.h  interval.cpp  interval.h  la_constr.cpp  la_constr.h  la_theory.cpp  la_theory.h  la_value_listener.h  lin.cpp  lin.h  lit.cpp  lit.h  sat_core.cpp  sat_core.h  sat_value_listener.h  set_theory.cpp  set_theory.h  set_value_listener.h  t_row.cpp  t_row.h  theory.cpp  theory.h  utils.h
smt-lib/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
smt-lib/tests/: la_theory_test.cpp  sat_core_test.cpp
translators/pddl2ratio/: build.xml
translators/pddl2ratio/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
translators/pddl2ratio/src/it/cnr/istc/translators/pddl2ratio/: PDDL.g4  PDDLBaseListener.java  PDDLListener.java  PDDLParser.java  PDDLVisitor.java
translators/pddl2ratio/src/it/cnr/istc/translators/pddl2ratio/language/: Action.java  AlwaysTerm.java  AlwaysWithinTerm.java  AndTerm.java  AssignOpTerm.java  AtEndTerm.java  AtMostOnceTerm.java  AtStartTerm.java  AtTerm.java  ComparisonTerm.java  Constant.java  ConstantTerm.java  Domain.java  DurativeAction.java  EitherType.java  EqTerm.java  ExistsTerm.java  ForAllTerm.java  Function.java  FunctionTerm.java  HoldAfterTerm.java  (+19 more)
(+19 files in other folders)
